--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "webhook-analytics",
   "version": "0.1.0",
-  "jsnext:source": "./src/index.ts",
-  "types": "./dist/types/index.d.ts",
+  "jsnext:source": "./src/index.js",
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "scripts": {
@@ -38,16 +37,12 @@
   "devDependencies": {
     "@modern-js/module-tools": "2.25.1",
     "@modern-js/eslint-config": "2.25.1",
-    "@modern-js/tsconfig": "2.25.1",
+    "@modern-js/tsconfig":"2.25.1",
     "@modern-js-app/eslint-config": "2.25.1",
     "rimraf": "~3.0.2",
     "lint-staged": "~13.1.0",
     "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "typescript": "~5.0.4",
-    "@types/jest": "~29.2.4",
-    "@types/node": "~16.11.7",
-    "@types/react": "~18.0.26"
+    "husky": "~8.0.1"
   },
   "sideEffects": [],
   "publishConfig": {
