--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webhook-analytics",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "jsnext:source": "./src/index.js",
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
@@ -32,21 +32,22 @@
     "node_modules/",
     "dist/"
   ],
-  "dependencies": {},
-  "peerDependencies": {},
   "devDependencies": {
-    "@modern-js/module-tools": "2.25.1",
-    "@modern-js/eslint-config": "2.25.1",
-    "@modern-js/tsconfig": "2.25.1",
     "@modern-js-app/eslint-config": "2.25.1",
-    "rimraf": "~3.0.2",
+    "@modern-js/eslint-config": "2.25.1",
+    "@modern-js/module-tools": "2.25.1",
+    "@modern-js/tsconfig": "2.25.1",
+    "husky": "~8.0.1",
     "lint-staged": "~13.1.0",
     "prettier": "~2.8.1",
-    "husky": "~8.0.1"
+    "rimraf": "~3.0.2"
   },
   "sideEffects": [],
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "isomorphic-fetch": "^3.0.0"
   }
 }
